Fixes #40: Fix combo box alignment

--- a/src/css/mat-input.scss
+++ b/src/css/mat-input.scss
@@ -4,3 +4,9 @@
   font-size: $fontsize-normal !important;
   line-height: $fontsize-normal !important;
 }
+
+.mat-form-field {
+  font-size: $fontsize-normal !important;
+  line-height: $fontsize-normal !important;
+}
+
